skin/frontend/creo/default/style.css
/* ... */
.modal-holder h2 {
    margin: 0 0 10px;
    text-transform: uppercase;
    color: #222;
    font: 40px/42px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.modal-holder p { margin: 0 0 10px; }
.subscribe-form {
    display: block;
    margin: 0;
    padding: 0;
    background: none;
    border: none;
}
input[type="text"],
input[type="password"],
input.email {
    display: block;
    background: none;
    border: 1px solid #ddd;
    width: 100%;
    height: 28px;
    line-height: 20px;
    margin: 0 0 10px;
    padding: 4px 10px;
    text-align: left;
}
input[type="submit"] {
    margin: 0 auto 20px;
    padding: 5px;
    display: block;
    border: 1px solid #565656;
    background: #222;
    width: 168px;
    height: 52px;
    text-align: center;
    cursor: pointer;
    text-transform: uppercase;
    color: #fff;
    font: 12px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
input[type="submit"]:hover {
    color: #000;
    background: #f16167;
    border-color: #f16167;
}
.subscribe-form .row { overflow: hidden; }
.subscribe-form .row label {
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding: 0 8px;
    color: #888;
    font: 16px/26px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.subscribe-form input[type="checkbox"] {
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding: 0;
}
.modal-holder .login-form {
    display: block;
    margin: 0;
    padding: 0;
}
.modal-holder .login-form label {
    display: block;
    margin: 0;
    padding: 0;
    text-align: left;
    color: #888;
    font: 16px/26px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.modal-holder .login-form .error {
    margin: 0 0 20px;
    display: block;
    color: #f71616;
    font: 15px/26px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.modal-holder .login-form .submit-holder { overflow: hidden; }
.modal-holder .login-form .submit-holder a {
    float: left;
    color: #888;
    line-height: 40px;
}
.modal-holder .login-form .submit-holder input[type="submit"] {
    float: right;
    width: 99px;
    height: 40px;
}
.modal-holder .heading-holder {
    overflow: hidden;
    text-align: center;
    margin: 0 0 20px;
}
.modal-holder .heading-holder h3 {
    font:bold 30px/34px "Roboto Condensed", Helvetica, Arial, sans-serif;
    color: #222;
    margin: 0;
    position: relative;
    padding: 0 10px;
    text-transform: uppercase;
    display: inline-block;
    vertical-align: middle;
}
.modal-holder .heading-holder h3:before,
.modal-holder .heading-holder h3:after {
    content: "";
    position: absolute;
    height: 4px;
    background: #eee;
    left: 100%;
    width: 9999px;
    top: 50%;
    margin-top: -2px;
}
.modal-holder .heading-holder h3:before {
    right: 100%;
    left: auto;
}
#nav .drop {
    position: absolute;
    top: 100%;
    left: 15px;
    right: 15px;
    border-bottom: 8px solid #f16a79;
    margin: 0;
    padding: 30px 30px 25px;
    background: #fff;
    display: none;
}
#nav ol > li:hover .drop { display: block; }
#nav .product-list {
    margin: 0;
    padding: 10px 0;
    list-style: none;
    border-width: 1px 0;
    border-style: solid;
    border-color: #dfdfdf;
    overflow: hidden;
}
#nav .product-list li {
    float: left;
    width: 120px;
    margin: 0 4px 8px 3px;
    position: relative;
}
#nav .product-list img {
    display: block;
    width: 100%;
    height: auto;
}
#nav .product-list .title {
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    padding: 4px 10px;
    border-width: 3px 0;
    background: #fff;
    border-color: #000;
    border-style: solid;
    transform: skewY(-15deg);
    -moz-transform: skewY(-15deg);
    -ms-transform: skewY(-15deg);
    -webkit-transform: skewY(-15deg);
    text-transform: uppercase;
    text-align: center;
    color: #222;
    font: 14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.col-static { position: static; }
#nav .links-holder {
    border-top: 1px solid #ddd;
    padding: 30px 0 0;
}
#nav .links-holder:after {
    display: block;
    content: '';
    clear: both;
}
#nav .cat-links {
    margin: 0 0 0 12px;
    padding: 0;
    float: left;
    list-style: none;
    width: 140px;
    text-transform: uppercase;
    text-align: center;
    color: #222;
    font: 14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#nav .cat-links:first-child { margin-left: 0; }
#nav .cat-links:nth-child(2) { margin-top: 14px; }
#nav .cat-links:nth-child(3) { margin-top: 28px; }
#nav .cat-links:nth-child(4) { margin-top: 42px; }
#nav .cat-links li { margin: 0 0 8px; }
#nav .cat-links a {
    display: block;
    border-width: 2px 0;
    border-color: #000;
    border-style: solid;
    padding: 2px 5px;
    transform: skewY(-7deg);
    -moz-transform: skewY(-7deg);
    -ms-transform: skewY(-7deg);
    -webkit-transform: skewY(-7deg);
}
#nav .cat-links a:hover {
    background: #f16167;
    text-decoration: none;
}
#nav .drop.cat-drop::before { height: 118px; }
.modal-open .modal {
    padding-left: 0px !important;
    padding-right: 0px !important;
    overflow-y: scroll;
}
.breadcrumb1 ul {
    margin: 0;
    padding: 10px 0;
    list-style: none;
    overflow: hidden;
    text-transform: uppercase;
    color: #000;
    font: 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.breadcrumb1 li {
    float: left;
    position: relative;
    margin: 0 45px 0 0;
}
.breadcrumb1 li:before {
    width:28px;
    height:2px;
    background:#f16167;
    position:absolute;
    top:50%;
    left:-38px;
    margin-top:-1px;
    content:'';
}
.breadcrumb1 li:after{
    width:7px;
    height:7px;
    margin-top:-3px;
    background:#f16167;
    border-radius:50%;
    position:absolute;
    top:50%;
    left:-14px;
    content:'';
}
.breadcrumb1 li:last-child:before {background:#e4e4e4;}
.breadcrumb1 li:last-child:after{display:none;}
.breadcrumb1 li a { color: #000; }
.cate-links{margin:0 0 20px;}
/* ... */

